# vmcmusicplayer

vmcmusicplayer/: configure.ac  vmcmusicplayer.h
